--- a/DWZ/themes/css/style.css
+++ b/DWZ/themes/css/style.css
@@ -70,7 +70,7 @@ legend{display:inline-block; margin-left:20px; margin-bottom:5px; padding:0 5px;
 .input-group-addon {padding:5px 10px;}
 .control-label{text-align:right;}
 .form-control{position:relative; display:inline-block; padding:2px 5px; width:auto; height:26px; font-size:14px; line-height:1.428571429; vertical-align:middle; border-radius:2px; -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075); box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075); -webkit-transition:border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; transition:border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;}
-.form-control.sm2 {padding:2px 2px; width:20px; height:20px;}
+.form-control.sm2 {padding:2px 1px; width:20px; height:20px; font-weight:normal;}
 .form-control.date{font-size:12px;}
 .form-control.readonly {background-color:transparent; -webkit-box-shadow:none !important; border:none; box-shadow:none !important;}
 .form-control.readonly:focus {border-color:transparent; -webkit-box-shadow:none !important; border:none; box-shadow:none !important;}
