--- a/DWZ/themes/blue/core.css
+++ b/DWZ/themes/blue/core.css
@@ -90,7 +90,10 @@ fieldset{border-color:#8fa2b2;}
 .pagination > .selected > a:focus,
 .pagination > .selected > span:focus{z-index:2; color:#ffffff; cursor:default; background-color:#3fa6fd; border-color:#d0e9fd;}
 .table > thead > tr > th{font-weight:bold; color:#013969; background:#eef7fe; border-bottom-color:#013969;}
-.table > thead > tr > th.orderby:hover{background:#d0e9fd !important;}
+.table > thead > tr > th.orderby a.order:hover{background:#d0e9fd !important;}
+.table th.orderby a.order:hover span{color:#3fa6fd;}
+.table th.orderby.asc a.order span.up{color:#3fa6fd;}
+.table th.orderby.desc a.order span.down{color:#3fa6fd;}
 .grid .resizeMarker, .grid .resizeProxy{background:#3fa6fd;}
 /* Table */
 .table > thead > tr > th{background:#eef7fe; border-bottom-color:#013969;}
@@ -171,6 +174,10 @@ fieldset{border-color:#8fa2b2;}
 .iradio_minimal-purple{background-position:-100px 0;} .iradio_minimal-purple.hover{background-position:-120px 0;} .iradio_minimal-purple.checked{background-position:-140px 0;} .iradio_minimal-purple.disabled{background-position:-160px 0; cursor:default;} .iradio_minimal-purple.checked.disabled{background-position:-180px 0;}
 /* Retina support */
 @media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (-moz-min-device-pixel-ratio:1.5), only screen and (-o-min-device-pixel-ratio:1.5), only screen and (min-device-pixel-ratio:1.5){.icheckbox_minimal-purple, .iradio_minimal-purple{background-image:url(purple@2x.png); -webkit-background-size:200px 20px; background-size:200px 20px;}}
+/*zTree*/
+.ztree li a:hover{color:#0024ff;}
+span.tmpzTreeMove_arrow,.ztree .tree_add, .ztree .tree_del,
+.ztree li span.button{background-image:url(zTreeStandard.png);}
 .ztree li a.curSelectedNode{background-color:#d0e9fd; color:black; border:1px #013969 solid;}
 .ztree li a.curSelectedNode_Edit{background-color:#d0e9fd; color:black; border:1px #013969 solid;}
 .ztree li a.tmpTargetNode_inner{background-color:#d0e9fd; color:white; border:1px #013969 solid;}
