--- a/DWZ/themes/default/core.css
+++ b/DWZ/themes/default/core.css
@@ -89,7 +89,7 @@ a:hover{color:#555555; text-decoration:underline;}
 .pagination > .selected > a:focus,
 .pagination > .selected > span:focus{z-index:2; color:#ffffff; cursor:default; background-color:#9b9b9b; border-color:#e5e5e5;}
 .table > thead > tr > th{font-weight:bold; color:#555555; background:#f7f7f7; border-bottom-color:#555555;}
-.table > thead > tr > th.orderby:hover{background:#e5e5e5 !important;}
+.table > thead > tr > th.orderby a.order:hover{background:#e5e5e5 !important;}
 .grid .resizeMarker, .grid .resizeProxy{background:#9b9b9b;}
 /* Table */
 .table > thead > tr > th{background:#f7f7f7; border-bottom-color:#555555;}
@@ -161,7 +161,9 @@ a:hover{color:#555555; text-decoration:underline;}
 .iradio_minimal-purple{background-position:-100px 0;} .iradio_minimal-purple.hover{background-position:-120px 0;} .iradio_minimal-purple.checked{background-position:-140px 0;} .iradio_minimal-purple.disabled{background-position:-160px 0; cursor:default;} .iradio_minimal-purple.checked.disabled{background-position:-180px 0;}
 /* Retina support */
 @media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (-moz-min-device-pixel-ratio:1.5), only screen and (-o-min-device-pixel-ratio:1.5), only screen and (min-device-pixel-ratio:1.5){.icheckbox_minimal-purple, .iradio_minimal-purple{background-image:url(purple@2x.png); -webkit-background-size:200px 20px; background-size:200px 20px;}}
-.ztree li a.curSelectedNode{background-color:#e5e5e5; color:black; border:1px #555555 solid;}
+/*zTree*/
+.ztree li a:hover{color:#682121;}
+.ztree li a.curSelectedNode{background-color:#e5e5e5; color:black; border:1px #555555 solid; border-radius:2px;}
 .ztree li a.curSelectedNode_Edit{background-color:#e5e5e5; color:black; border:1px #555555 solid;}
 .ztree li a.tmpTargetNode_inner{background-color:#e5e5e5; color:white; border:1px #555555 solid;}
 ul.ztree.zTreeDragUL{background-color:#cfcfcf; border:1px #929292 dotted;}
