--- a/DWZ/themes/blue/core.css
+++ b/DWZ/themes/blue/core.css
@@ -48,7 +48,7 @@ fieldset{border-color:#8fa2b2;}
 .tabsPage .tabsPageHeader{border-color:none;}
 .tabsPage .tabsPageHeader li a{color:#013969;}
 .tabsPage .tabsPageHeader li .close,
-.tabsPage .tabsPageHeader li.hover .close,
+.tabsPage .tabsPageHeader li:hover .close,
 .tabsPage .tabsPageHeader li.selected .close{background:none;}
 .tabsPage .tabsLeft, .tabsPage .tabsRight, .tabsPage .tabsMore{background:none;}
 .tabsPage .tabsPageHeader .home_icon{background:none;}
@@ -72,13 +72,6 @@ fieldset{border-color:#8fa2b2;}
 .dialog .pageTableContent{background-color:#fff; border:1px #8fa2b2 solid;}
 /* Dialog Resizable */
 .resizable{background:#eef7fe; border-color:#013969;}
-/* Accordion */
-.accordion .accordionHeader, .accordion .accordionHeader h2, .accordion .accordionHeader h2 span{color:#183152;}
-.accordion{background:#FFF; border-color:#013969;}
-.accordion .accordionHeader{border-bottom:1px #013969 solid;}
-.accordion .accordionContent{border-color:#013969;}
-.accordion .accordionHeader{text-shadow:0 1px 0 #FFF; background-image:-webkit-linear-gradient(top, #eef7fe 0%, #d0e9fd 100%); background-image:linear-gradient(to bottom, #eef7fe 0%, #d0e9fd 100%); background-repeat:repeat-x; border-color:#aca7b5; border-color:#aca7b5; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffeef7fe', endColorstr='#ffd0e9fd', GradientType=0); filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);}
-.accordion .accordionHeader.hover{text-shadow:0 1px 0 #FFF; background-image:-webkit-linear-gradient(top, #d0e9fd 0%, #aad7fd 100%); background-image:linear-gradient(to bottom, #d0e9fd 0%, #aad7fd 100%); background-repeat:repeat-x; border-color:#aca7b5; border-color:#aca7b5; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd0e9fd', endColorstr='#ffaad7fd', GradientType=0); filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);}
 /* Grid */
 .panelBar{background:#eef7fe; border-top:1px #013969 solid;}
 .pagination > li > a {color:#0024ff;}
@@ -105,7 +98,7 @@ fieldset{border-color:#8fa2b2;}
 #taskbar{background-image:-webkit-linear-gradient(top, #013969 0%, #333333 100%); background-image:linear-gradient(to bottom, #013969 0%, #333333 100%); background-repeat:repeat-x; border-color:#dbdbdb; border-color:#ccc; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff013969', endColorstr='#ff333333', GradientType=0); filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);}
 #taskbar li{background-image:-webkit-linear-gradient(top, #ffffff 0%, #e0e0e0 100%); background-image:linear-gradient(to bottom, #ffffff 0%, #e0e0e0 100%); background-repeat:repeat-x; border-color:#dbdbdb; border-color:#ccc; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe0e0e0', GradientType=0); filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);}
 #taskbar li .taskbutton i{color:#013969;}
-#taskbar .hover{background:#eef7fe;}
+#taskbar li:hover{background:#eef7fe;}
 #taskbar .close{color:#3fa6fd;}
 #taskbar .close:hover{color:#013969;}
 /* ProgressBar */
@@ -114,7 +107,7 @@ fieldset{border-color:#8fa2b2;}
 /* rightMenu */
 #contextmenu ul{background-color:#fff; border:1px solid #999;}
 #contextmenu li{color:#013969; background-color:transparent; border:1px solid #fff;}
-#contextmenu li.hover{background-color:#eef7fe; border:1px solid #008aff;}
+#contextmenu li:hover{background-color:#eef7fe; border:1px solid #008aff;}
 #contextmenu li.disabled{color:#999;}
 #contextmenu li.disabled:hover{cursor:default;}
 /* calendar */
