--- a/DWZ/themes/default/core.css
+++ b/DWZ/themes/default/core.css
@@ -47,7 +47,7 @@ a:hover{color:#555555; text-decoration:underline;}
 .tabsPage .tabsPageHeader{border-color:none;}
 .tabsPage .tabsPageHeader li a{color:#555555;}
 .tabsPage .tabsPageHeader li .close,
-.tabsPage .tabsPageHeader li.hover .close,
+.tabsPage .tabsPageHeader li:hover .close,
 .tabsPage .tabsPageHeader li.selected .close{background:none;}
 .tabsPage .tabsLeft, .tabsPage .tabsRight, .tabsPage .tabsMore{background:none;}
 .tabsPage .tabsPageHeader .home_icon{background:none;}
@@ -71,13 +71,6 @@ a:hover{color:#555555; text-decoration:underline;}
 .dialog .pageTableContent{background-color:#fff; border:1px #a3a3a3 solid;}
 /* Dialog Resizable */
 .resizable{border-color:#555555; background:#f7f7f7;}
-/* Accordion */
-.accordion .accordionHeader, .accordion .accordionHeader h2, .accordion .accordionHeader h2 span{color:#183152;}
-.accordion{background:#FFF; border-color:#555555;}
-.accordion .accordionHeader{border-bottom:1px #555555 solid;}
-.accordion .accordionContent{border-color:#555555;}
-.accordion .accordionHeader{text-shadow:0 1px 0 #FFF; background-image:-webkit-linear-gradient(top, #f7f7f7 0%, #e5e5e5 100%); background-image:linear-gradient(to bottom, #f7f7f7 0%, #e5e5e5 100%); background-repeat:repeat-x; border-color:#aca7b5; border-color:#aca7b5; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff7f7f7', endColorstr='#ffe5e5e5', GradientType=0); filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);}
-.accordion .accordionHeader.hover{text-shadow:0 1px 0 #FFF; background-image:-webkit-linear-gradient(top, #e5e5e5 0%, #cccbcb 100%); background-image:linear-gradient(to bottom, #e5e5e5 0%, #cccbcb 100%); background-repeat:repeat-x; border-color:#aca7b5; border-color:#aca7b5; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe5e5e5', endColorstr='#ffcccbcb', GradientType=0); filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);}
 /* Grid */
 .panelBar{background:#f7f7f7; border-top:1px #555555 solid;}
 .pagination > li > a {color:#682121;}
@@ -101,7 +94,7 @@ a:hover{color:#555555; text-decoration:underline;}
 #taskbar{background-image:-webkit-linear-gradient(top, #555555 0%, #333333 100%); background-image:linear-gradient(to bottom, #555555 0%, #333333 100%); background-repeat:repeat-x; border-color:#dbdbdb; border-color:#ccc; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff555555', endColorstr='#ff333333', GradientType=0); filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);}
 #taskbar li{background-image:-webkit-linear-gradient(top, #ffffff 0%, #e0e0e0 100%); background-image:linear-gradient(to bottom, #ffffff 0%, #e0e0e0 100%); background-repeat:repeat-x; border-color:#dbdbdb; border-color:#ccc; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe0e0e0', GradientType=0); filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);}
 #taskbar li .taskbutton i{color:#555555;}
-#taskbar .hover{background:#f7f7f7;}
+#taskbar li:hover{background:#f7f7f7;}
 #taskbar .close{color:#9b9b9b;}
 #taskbar .close:hover{color:#555555;}
 /* ProgressBar */
@@ -110,7 +103,7 @@ a:hover{color:#555555; text-decoration:underline;}
 /* rightMenu */
 #contextmenu ul{background-color:#fff; border:1px solid #999;}
 #contextmenu li{color:#555555; border:1px solid #fff; background-color:transparent;}
-#contextmenu li.hover{background-color:#f7f7f7; border:1px solid #929292;}
+#contextmenu li:hover{background-color:#f7f7f7; border:1px solid #929292;}
 #contextmenu li.disabled{color:#999;}
 #contextmenu li.disabled:hover{cursor:default;}
 /* calendar */
